fix z-index for mobile

--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -2,7 +2,7 @@
   align-items: center;
   position: fixed;
   display: flex;
-  z-index: 10;
+  z-index: 20;
   top: 0;
 }
 
