--- a/src/components/search-page.module.css
+++ b/src/components/search-page.module.css
@@ -55,7 +55,7 @@
   bottom: 0;
   height: 100vh;
   width: 100vw;
-  z-index: 10;
+  z-index: 30;
   background-color: var(--background);
   overscroll-behavior: contain;
 }
